<resources>
    <string name="app_name">RunTo</string>
    <string name="login">Login</string>
    <string name="signUp">Sign up</string>
    <string name="logFailed">Login Failed</string>
    <string name="logEmail">\t\t\tEmail</string>
    <string name="logPass">\t\t\tPassword</string>
    <string name="signNickname">Nickname</string>
    <string name="addProfile">Profile picture</string>
    <string name="signEmail">Email</string>
    <string name="signPass">Password at least 6 characters</string>
    <string name="signConfirm">Confirm Password</string>
    <string name="createAccount">Create an account</string>
    <string name="signBack">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="recordhint">Please write the content</string>
    <string name="open">opened</string>
    <string name="close">closed</string>
    <string name="edit">Edit</string>
    <string name="editPass">Change Password</string>
    <string name="community">Community</string>
    <string name="nav1">Edit profile</string>
    <string name="nav2">Setting</string>
    <string name="nav3">Logout</string>
    <string name="write">Post</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="alarm">Alarm</string>
    <string name="lang">Language</string>
    <string name="lang1">English</string>
    <string name="lang2">Korean</string>
    <string name="comment">Comments</string>
    <string name="commenthint">Write a comment.</string>
</resources>