<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/addProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/account_circle" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/addProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addProfile" />
    </LinearLayout>

    <EditText
        android:id="@+id/inputNick"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/signNickname"
        android:inputType="text"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/signEmail"
        android:inputType="text"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/signPass"
        android:inputType="textPassword"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/inputConfirm"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/signConfirm"
        android:inputType="textPassword"
        android:textSize="14dp" />
    <!--가입하기-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signBtn"
        style="@style/myBtn"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#B1BDFF"
        android:text="@string/createAccount"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signBack"
        style="@style/myBtn"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:backgroundTint="#B9BAC1"
        android:text="@string/signBack"
        android:textColor="@color/white" />
</LinearLayout>