<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Login"
        android:textSize="50dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_marginBottom="29dp"
        android:background="@color/black"
        android:backgroundTint="#F6F6F6"
        android:ems="10"
        android:hint="@string/logEmail"
        android:inputType="text"
        android:strokeWidth="2"
        android:strokeColor="#E8E8E8"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_marginBottom="66dp"
        android:background="@color/black"
        android:backgroundTint="#F6F6F6"
        android:ems="10"
        android:hint="@string/logPass"
        android:inputType="textPassword"
        android:strokeWidth="2"
        android:strokeColor="#E8E8E8"
        android:textSize="14dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        style="@style/myBtn"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#B1BDFF"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signBtn"
        style="@style/myBtn"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:backgroundTint="#B9BAC1"
        android:text="@string/signUp"
        android:textColor="@color/white" />

</LinearLayout>