<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF1FF"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            style="@style/myBtn"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:backgroundTint="#EFF1FF"
            android:text="@string/save"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            style="@style/myBtn"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:backgroundTint="#EFF1FF"
            android:text="@string/cancel"
            android:textColor="@color/black" />
    </LinearLayout>

    <EditText
        android:id="@+id/inputRecord"
        android:layout_width="310dp"
        android:layout_height="410dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/recordhint"
        android:padding="10dp" />
</LinearLayout>